# Oxyde

./: .gitignore  Cargo.toml  LICENSE  README.md
.reuse/: dep5
LICENSES/: OFL-1.1.txt
crates/compositor/: Cargo.toml
crates/compositor/src/: main.rs
crates/dock/: Cargo.toml
crates/dock/src/: lib.rs
crates/expose/: Cargo.toml
crates/expose/src/: lib.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: lib.rs
crates/oxyconfig/: Cargo.toml
crates/oxyconfig/src/: lib.rs
crates/oxykeys/: Cargo.toml
crates/oxykeys/src/: lib.rs
crates/oxymenu/: Cargo.toml
crates/oxymenu/src/: lib.rs
crates/oxynotify/: Cargo.toml
crates/oxynotify/src/: lib.rs
crates/panel/: Cargo.toml
crates/panel/src/: lib.rs
crates/theming/: Cargo.toml
crates/theming/src/: lib.rs
oxyde/: Cargo.toml
oxyde/crates/compositor/: Cargo.toml
oxyde/crates/compositor/src/: main.rs
oxyde/crates/oxykeys/src/: lib.rs
taskbar/: bar_start  bar_start.c  bar_y2k  bar_y2k.c  build.sh  launch_sway.sh  main.c  probe  probe.c  run-nested-sway.sh  taskbar
